# bendibugxiangmu

./: .gitignore  CONFIG_GUIDE.md  Pixelle-Video_产品功能分析.md  components.json  config.example.yaml  debug-tauri-entrypoint-not-found.md  index.html  package-lock.json  package.json  pyproject.toml  sitemap.xml  tailwind.config.ts  tsconfig.json  vite.config.ts  批量导入样本.txt  洗稿功能测试.txt
ARCHITECTURE/: index.html
PRD/: index.html
api/: app.py  batch_executor.py  batch_manager.py  batch_persistence.py  config.py  schedule_executor.py
api/routers/: __init__.py  batch.py  content.py  frame.py  llm.py  model_manager.py  prompts.py  rhythm.py  schedule.py  video.py
api/schemas/: __init__.py  batch.py  content.py  frame.py  llm.py  model_manager.py  rhythm.py  schedule.py  video.py
api/services/: rhythm.py
architecture_analysis/: index.html
docs/: ARCHITECTURE.md  PRD.md  architecture_analysis.md  class-diagram.mermaid  sequence-diagram.mermaid
pixelle_video/config/: schema.py
pixelle_video/pipelines/: asset_based.py  standard.py
pixelle_video/prompts/: few_shot_examples.py  manager.py  rewrite.py
pixelle_video/services/: asr_service.py  frame_html.py  llm_service.py  material_library.py  mimo_tts.py  minimax_tts.py  tts_service.py  video.py
search/: search_index.json
src/: App.vue  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/composables/: useApi.ts  useTauriCommand.ts  useTxtParser.ts  useWebSocket.ts
src/router/: index.ts
src/services/: api.ts  configIO.ts  (+1 more)
(+86 files in other folders)
